--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,19 @@ body {
   bottom: 10px;
   left: 10px;
   z-index: 100;
-  border: 3px solid white;
-  border-radius: 3px;
+}
 
+.OT_publisher {
+  position: relative;
+  left: 200px;
+}
+
+.OT_subscriber {
+  position: relative;
+  left: 900px;
+  width: 360px;
+  height: 240px;
+  bottom: 577px;
 }
 /*#publisher {
     text-align: right;
