--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 body {
   background: url('https://ga-dash.s3.amazonaws.com/production/assets/anna-bg.png') no-repeat center center fixed;
+  background-size:cover;
+  color: white;
 }
 
 #videos {
@@ -17,6 +19,8 @@ body {
   bottom: 10px;
   left: 10px;
   z-index: 100;
+  margin-left: 12%;
+  margin-top: 20px;
 }
 
 .OT_publisher {
@@ -41,10 +45,17 @@ body {
     z-index: 100;
     border: 3px solid white;
     border-radius: 3px;
-}
+}*/
 
 .buttons {
   margin-bottom: 10px;
+  margin-left: 33%;
+}
+
+.buttons2 {
+  margin-bottom: 10px;
+  margin-left: 60%;
+  padding-bottom: 35px;
 }
 
 #poop {
@@ -58,13 +69,13 @@ body {
 }
 
 #poop2 {
+  text-align: right;
   height: 50px;
   width: 50px;
 }
 
 #pound2 {
+  text-align: right;
   height: 50px;
   width: 50px;
 }
-
-}*/
