--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,13 @@ body {
 }
 
 #publisher {
-  position: relative;
-  width: 360px;
-  height: 240px;
+  text-align: left;
+  width: 0%;
+  height: 0%;
   bottom: 10px;
   left: 10px;
   z-index: 100;
-  margin-left: 12%;
+  /*margin-left: 27%;*/
   margin-top: 20px;
 }
 
@@ -35,6 +35,11 @@ body {
   height: 240px;
   bottom: 577px;
 }
+
+.OT_5181bc77_94dd_4b54_b8ff_28834c895e45 {
+  height: 400px;
+  width: 400px;
+}
 /*#publisher {
     text-align: right;
     position: relative;
@@ -47,14 +52,19 @@ body {
     border-radius: 3px;
 }*/
 
+#publisher2 {
+  margin-top: 10%;
+}
+
 .buttons {
   margin-bottom: 10px;
   margin-left: 33%;
 }
 
+
 .buttons2 {
   margin-bottom: 10px;
-  margin-left: 60%;
+  margin-left: 33%;
   padding-bottom: 35px;
 }
 
